fixed jumpy animation on hamburger

--- a/src/atoms/main-menu/_main-menu.scss
+++ b/src/atoms/main-menu/_main-menu.scss
@@ -48,17 +48,13 @@
 					background-color: transparent;
 
 					&::before {
-						top: 50%;
+						top: 0;
 						transform: rotate(45deg);
 					}
 
 					&::after {
-						top: 50%;
+						bottom: 0%;
 						transform: rotate(-45deg);
-					}
-
-					@include e(second) {
-						display: none;
 					}
 				}
 
@@ -86,7 +82,7 @@
 				height: 2px;
 				margin-left: rhythm(1);
 				transform-origin: 50% 50%;
-				transition: transform 0.3s ease-out;
+				transition: all 0.3s ease-out, background-color 0.15s ease-out;
 				border: 0;
 				border-radius: 0;
 				background-color: currentColor;
@@ -99,7 +95,7 @@
 					position: absolute;
 					width: 100%;
 					height: 2px;
-					transition: all 0.3s ease-out;
+					transition: transform 0.3s ease-out, top 0.3s ease-out, bottom 0.3s ease-out;
 					background-color: currentColor;
 				}
 
